Fix schema issues
